# relayguard

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  railway.toml
apps/cli/: audit_incident.py  capture_evidence.py  create_incident.py  db_status.py  list_incidents.py  run_worker.py  stale_commit.py  verify_demo.py
apps/web/: DESIGN.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
db/: schema.sql  seed.sql
db/migrations/: 002_vector_memory.sql
db/queries/: audit_incident.sql
docs/: architecture-diagram.md  architecture-diagram.mmd  architecture.md  aws-lambda.md  ccloud.md  cockroach-cloud.md  frontend.md  mcp-auditor.md
infra/: docker-compose.yml
relayguard/: action_selector.py  audit_reader.py  audit_timeline.py  bedrock_selector.py  ccloud_cli.py  config.py  db.py  demo_corpus.py  embeddings.py  evidence_capture.py  judge_display.py  models.py  secrets.py  store.py
scripts/: capture-evidence.ps1  capture-evidence.sh  demo_state.py  deploy-web-railway.ps1  find-ccloud.ps1  run-bedrock-demo.ps1  run-bedrock-demo.sh  run-demo.ps1  run-demo.sh  run-web.ps1  run-web.sh  setup-db.sh  test.ps1  verify-demo.sh
tests/: conftest.py  test_m2_memory.py  test_m3_action_selector.py  test_m4_audit_reader.py  test_m5_cloud.py  test_m6_lambda_handler.py  test_m7_dashboard_api.py  test_m7_timeline_order.py  test_m8_ccloud_cli.py  test_m8_evidence_capture.py  test_m8_judge_labels.py  test_m9_submission_docs.py  test_relayguard.py  test_retry.py
workers/: memory_gate.py  memory_retriever.py  worker.py
(+46 files in other folders)
